# watermark-cli

./: .gitignore  README.md  pyproject.toml  watermark
watermark_cli/: __init__.py  watermark.py
